Hide the menu on small screens

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
        padding: 0;
        font-family: Google Sans,Roboto,Arial,Helvetica,sans-serif;
    }
+   .menu {
+       display: none;
+   }
+   @media (min-width:1025px) {
+       .menu {
+           display: block;
+       }
+   }
    .menu a, .menu a:visited, .menu a:hover, .menu a:active {
        color: inherit;
        text-decoration: inherit;
