Make the reserved keywords transparent but still selectable

--- a/test.html
+++ b/test.html
@@ -1,8 +1,8 @@
 <script src="typograms.js"></script>
 <link rel="stylesheet" href="typograms.css"></link>
 <br>
-<script type="text/typogram" grid zoom=5>
-  |
+<script type="text/typogram">
+  +-
   v
-  *
+  * hello
 </script>
