Render spaces to allow for copying-pasting

--- a/test.html
+++ b/test.html
@@ -2,7 +2,6 @@
 <link rel="stylesheet" href="typograms.css"></link>
 <br>
 <script type="text/typogram">
-  +-
-  v
-  * hello
+  <- hello ->
+  <- world ->  
 </script>
