--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <script src="typograms.js"></script>
 <link rel="stylesheet" href="typograms.css"></link>
 <br>
-<script type="text/typogram">
+<script type="text/typogram" grid zoom=5>
   <- hello ->
   <- world ->  
 </script>
