Add more known issues

--- a/index.html
+++ b/index.html
@@ -647,6 +647,26 @@ Cpu.Qon :~~~~~~~~~~~~~~~~.-----------
 
     <p>This is a list of constructions that are currently looking into supporting.</p>
 
+    <h2>Dashed lines aren't great</h2>
+    <script type="text/typogram" zoom=3 grid>
++~~~+
+:   :
++~~~+
+    </script>
+
+    <h2>Triangles aren't pointy</h2>
+    <script type="text/typogram" zoom=3 grid>
+  +
+ / \
++---+
+    </script>
+
+    <h2>Text detection gets confused</h2>
+    <script type="text/typogram" zoom=3 grid>
+-----
+"|||"
+    </script>
+
     <h2>Small curved steps</h2>
     <script type="text/typogram">
 "      -._ _.-                        "
