Use the singular in the mime type

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
     <h1 id="overview">Overview</h1>
 
-    <p>Typograms (typographic diagrams) is a lightweight image format (<code>text/typograms</code>) useful for defining simple diagrams in technical documentation.</p>
+    <p>Typograms (typographic diagrams) is a lightweight image format (<code>text/typogram</code>) useful for defining simple diagrams in technical documentation.</p>
 
     <p>Like markdown, typograms is heavily inspired by pre-existing conventions found in <a href="https://en.wikipedia.org/wiki/ASCII_art">ASCII</a> diagrams. A small set of <a href="#primitives">primitives</a> and rules to connect them is defined, which you can use to build larger <a href="#examples">diagrams</a>.</p>
 
