Wrap the example inside a body tag to make it work by copy/paste

--- a/index.html
+++ b/index.html
@@ -136,13 +136,15 @@
 
     <pre>
       <code class="language-html">
-&lt;script src="https://code.sgo.to/typograms/typograms.js"&gt;&lt;/script&gt;
-&lt;link rel="stylesheet" href="https://code.sgo.to/typograms/typograms.css"&gt;&lt;/link&gt;
-&lt;script type="text/typogram"&gt;
+&lt;body&gt;
+  &lt;script src="https://code.sgo.to/typograms/typograms.js"&gt;&lt;/script&gt;
+  &lt;link rel="stylesheet" href="https://code.sgo.to/typograms/typograms.css"&gt;&lt;/link&gt;
+  &lt;script type="text/typogram"&gt;
 +----+
 |    |---> My first diagram!
 +----+
-&lt;/script&gt;
+  &lt;/script&gt;
+&lt;/body&gt;
       </code>
     </pre>
 
