Replace <pre lang="typogram"> nodes

--- a/test.html
+++ b/test.html
@@ -1,7 +1,16 @@
 <script src="typograms.js"></script>
 <link rel="stylesheet" href="typograms.css"></link>
+
+<pre lang="typogram">
+  <code>
++----+
+|.   |---&gt; hello world!
++----+
+  </code>
+</pre>
+
 <br>
-<script type="text/typogram" grid zoom=5>
+<script type="text/typogram">
   \ /
    +
 </script>
