Fix reach of down arrows with empty walls

--- a/test.html
+++ b/test.html
@@ -1,16 +1,7 @@
 <script src="typograms.js"></script>
 <link rel="stylesheet" href="typograms.css"></link>
 
-<pre lang="typogram">
-  <code>
-+----+
-|.   |---&gt; hello world!
-+----+
-  </code>
-</pre>
-
 <br>
-<script type="text/typogram">
-  \ /
-   +
+<script type="text/typogram" zoom=5 grid>
+v
 </script>
