Improve the rendering of dashed lines

--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
  '------------' | '-----------' |  '-----'
         |       |      |        |
         v       |      |        v
-     .----.     |      |    .---------.
-     | IO |<----'      |    | Network |
-     '----'            |    '---------'
+     .----.     |      |    .~~~~~~~~~.
+     | IO |<----'      |    : Network :
+     '----'            |    '~~~~~~~~~'
         |              |         |
         v              v         v
  .---------------------------------------.
@@ -321,13 +321,19 @@
     <h2 id="tables">Tables</h2>
 
     <script type="text/typogram">
-+-----+---------+---------+
-| ID  | First   | Last    |
-+-----+---------+---------+
-| 1   | Joe     | Doe     |
-+-----+---------+---------+
-| 2   | Anna    | Merkle  |
-+-----+---------+---------+
++-----+---------+---------+~~~  ~~~+----------+
+| ID  | First   | Last    :        : Lang     |
++-----+---------+---------+~~~  ~~~+----------+
+| 1   | Joe     | Doe     :        : en-US    |
++-----+---------+---------+~~~  ~~~+----------+
+| 2   | Rick    | Russel  :        : en-US    |
++-----+---------+---------+~~~  ~~~+----------+
+:     :         :         :        :          :
+
+:     :         :         :        :          :
++-----+---------+---------+~~~  ~~~+----------+
+| 999 | Anna    | Merkle  :        : pt-BR    |
++-----+---------+---------+~~~  ~~~+----------+
     </script>   
 
     <h2 id="flowcharts">Flow charts</h2>
@@ -384,12 +390,12 @@ Linux
     <h2 id="shapes">Shapes</h2>
     <h3>Big Shapes</h3>
     <script type="text/typogram">
-  +---------+  +  +------+       .-----.  +-----+     +----+       +----+
-   \       /  / \  \      \      |     |  |     |    /      \     /      \
-    \     /  /   \  \      \     |     |  |     |   /        \   |        |
-     \   /  /     \  \      \    |     |  |     |   \        /   |        |
-      \ /  /       \  \      \   |     |  |     |    \      /     \      /
-       +  +---------+  +------+  '-----'  +-----+     +----+       +----+
+  +---------+  +  +------+       .-----.  +~~~~~+     +----+       +----+
+   \       /  / \  \      \      |     |  :     :    /      \     /      \
+    \     /  /   \  \      \     |     |  :     :   /        \   |        |
+     \   /  /     \  \      \    |     |  :     :   \        /   |        |
+      \ /  /       \  \      \   |     |  :     :    \      /     \      /
+       +  +---------+  +------+  '-----'  +~~~~~+     +----+       +----+
     </script>   
 
     <h3>Small Shapes</h3>
@@ -663,13 +669,6 @@ Cpu.Qon :~~~~~~~~~~~~~~~~.-----------
     <h1 id="wip">Work in Progress</h1>
 
     <p>This is a list of constructions that are currently looking into supporting.</p>
-
-    <h2>Dashed lines aren't great</h2>
-    <script type="text/typogram" zoom=3 grid>
-+~~~+
-:   :
-+~~~+
-    </script>
 
     <h2>Triangles aren't pointy</h2>
     <script type="text/typogram" zoom=3 grid>
