Capture a rendering bug

--- a/index.html
+++ b/index.html
@@ -677,6 +677,12 @@ Cpu.Qon :~~~~~~~~~~~~~~~~.-----------
 +---+
     </script>
 
+    <h2>Diagonals don't join with underscores</h2>
+    <script type="text/typogram" zoom=3 grid>
+ ___
+/   \
+    </script>
+
     <h2>Text detection gets confused</h2>
     <script type="text/typogram" zoom=3 grid>
 -----
