--- a/test.html
+++ b/test.html
@@ -1,9 +1,6 @@
 <script src="typograms.js"></script>
-<link rel="stylesheet" href="typograms.css"></link>
 
 <br>
-<script type="text/typogram" zoom=5 grid>
-+~~+
-:  :
-+~~+
+<script type="text/typogram">
+|
 </script>
