Make triangles corners with + pointy

--- a/index.html
+++ b/index.html
@@ -398,9 +398,9 @@ Linux
 
     <h3>Small Shapes</h3>
     <script type="text/typogram">
-   __        ____     ___                     .---.     __
-  /  \   /\  \  /  +  \ /  /\   +-+  +-+ +-+  |   | ++ |  |  _
-  \__/  /__\  \/  /_\  +  /  \  +-+ /_/   \_\ '---' ++ |__| |_|
+   __        ____     ___                     .---.     __        +-+  +-+
+  /  \   /\  \  /  +  \ /  /\   +-+  +-+ +-+  |   | ++ |  |  _   / /    \ \
+  \__/  /__\  \/  /_\  +  /  \  +-+ /_/   \_\ '---' ++ |__| |_| +-+      +-+
                          +----+
     </script>   
 
@@ -668,11 +668,10 @@ Cpu.Qon :~~~~~~~~~~~~~~~~.-----------
 
     <p>This is a list of constructions that are currently looking into supporting.</p>
 
-    <h2>Triangles aren't pointy</h2>
+    <h2>Triangles connected without + aren't pointy</h2>
     <script type="text/typogram" zoom=3 grid>
-  +
- / \
-+---+
+ /
+ \
     </script>
 
     <h2>Diagonals don't join with underscores</h2>
