--- a/test.html
+++ b/test.html
@@ -1,6 +1,8 @@
 <script src="typograms.js"></script>
 
 <br>
-<script type="text/typogram">
-|
+<script type="text/typogram" zoom=5 grid>
+  /
+ +
+  \
 </script>
