Dont add grids outside debug mode

--- a/test.html
+++ b/test.html
@@ -1,7 +1,7 @@
 <script src="typograms.js"></script>
 
 <br>
-<script type="text/typogram" zoom=5 grid>
+<script type="text/typogram">
   /
  +
   \
