--- a/test.html
+++ b/test.html
@@ -1,8 +1,33 @@
 <script src="typograms.js"></script>
 
 <br>
+<script type="text/typogram" grid zoom=5>
+-.
+ `-
+</script>
+
+<br>
 <script type="text/typogram">
-  /
- +
-  \
+┌─────────────────────────────────┐       ┌─────────────────────────────────┐
+| ┌─────────────────────────────┐ |       | ┌─────────────────────────────┐ |
+| | "https://rp.example"        | |       | | "https://rp.example"        | |
+| └─────────────────────────────┘ |       | └─────────────────────────────┘ |
+| ┌─────────────────────────────┐ |       | ┌─────────────────────────────┐ |
+| |                             | |       | |                             | |
+| |   Welcome to my website!    | |       | |  Welcome to my website!     | |
+| |                             | |       | |                             | |
+| |                             | |       | |                             | |
+| +─────────────────────────────+ |       | +─────────────────────────────+ |
+| |       Choose an account     | |       | |    Sign-in to rp.example    | |
+| |   to sign-in to rp.example  | |       | |      with idp.example?      | |
+| |                             | |       | |                             | |
+| | ┌────┐                      | |       | | ┌────┐                      | |
+| | | :) |  John Doe            | |  ──►  | | | :) |  John Doe            | |
+| | └────┘  john@email.com      | |       | | └────┘  john@email.com      | |
+| | ┌────┐                      | |       | |                             | |
+| | | :] |  John Doe            | |       | | ┌─────────────────────────┐ | |
+| | └────┘  john.doe@work.com   | |       | | |    Continue as John     | | |
+| |                             | |       | | └─────────────────────────┘ | |
+| └─────────────────────────────┘ |       | └─────────────────────────────┘ |
+└─────────────────────────────────┘       └─────────────────────────────────┘
 </script>
