Add a reference to the main github directory

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@
   <div class="container"><a href="https://google.github.io/typograms/">Typograms</a></div>
 </div>
 <div class="body">
+
   <div class="menu">
     <a href="#overview">Overview</a>
     <br><br><a href="#installation">Installation</a>
@@ -119,6 +120,8 @@
   </div>
   <main>
 
+    <a href="https://github.com/google/typograms/">https://github.com/google/typograms/</a>
+    
     <h1 id="overview">Overview</h1>
 
     <p>Typograms (typographic diagrams) is a lightweight image format (<code>text/typogram</code>) useful for defining simple diagrams in technical documentation.</p>
