Replace polyfill -> JS renderer

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     
     <p>A comparison with <a href="#related">related</a> work is available below.</p>
 
-    <p>A <a href="#installation">polyfill</a> is available that allows you use to use it in browsers.</p>
+    <p>A <a href="#installation">JS renderer</a> is available that allows you use to use it in browsers.</p>
 
     <h1 id="installation">Installation</h1>
 
